examples/jp_chkt_06.err
Line 7:4 error: Assignment with incompatible types.
Line 7:11 error: Operator 'or' with incompatible types.
Line 8:4 error: Assignment with incompatible types.
Line 8:7 error: Identifier 'f2' is undeclared.
Line 8:18 error: Operator '>' with incompatible types.
Line 10:0 error: There is no 'main' function properly declared.
